# BackendApi/swagger.json
@@ -2,13 +2,20 @@
   "openapi": "3.0.1",
   "info": {
     "title": "BackendApi",
+    "description": "Das ist unser erster Dienst",
     "version": "1.0"
   },
+  "servers": [
+    {
+      "url": "https://localhost:7242",
+      "description": "Localhost (Dev)"
+    }
+  ],
   "paths": {
-    "/api/Devices/{id}": {
+    "/api/Documents/{id}": {
       "get": {
         "tags": [
-          "Devices"
+          "Documents"
         ],
         "operationId": "GetById",
         "parameters": [
@@ -31,7 +38,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DeviceDto"
+                  "$ref": "#/components/schemas/DocumentDto"
                 }
               }
             }
@@ -42,10 +49,10 @@
         }
       }
     },
-    "/api/Devices": {
+    "/api/Documents": {
       "get": {
         "tags": [
-          "Devices"
+          "Documents"
         ],
         "operationId": "GetAll",
         "responses": {
@@ -59,7 +66,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/DeviceListDto"
+                    "$ref": "#/components/schemas/DocumentListDto"
                   }
                 }
               }
@@ -69,24 +76,24 @@
       },
       "post": {
         "tags": [
-          "Devices"
+          "Documents"
         ],
         "operationId": "Add",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/DeviceDto"
+                "$ref": "#/components/schemas/DocumentDto"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/DeviceDto"
+                "$ref": "#/components/schemas/DocumentDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/DeviceDto"
+                "$ref": "#/components/schemas/DocumentDto"
               }
             }
           }
@@ -105,24 +112,24 @@
       },
       "put": {
         "tags": [
-          "Devices"
+          "Documents"
         ],
         "operationId": "Update",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/DeviceDto"
+                "$ref": "#/components/schemas/DocumentDto"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/DeviceDto"
+                "$ref": "#/components/schemas/DocumentDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/DeviceDto"
+                "$ref": "#/components/schemas/DocumentDto"
               }
             }
           }
@@ -140,10 +147,10 @@
         }
       }
     },
-    "/api/Devices/name": {
+    "/api/Documents/name": {
       "get": {
         "tags": [
-          "Devices"
+          "Documents"
         ],
         "operationId": "Search",
         "parameters": [
@@ -173,7 +180,52 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/DeviceListDto"
+                    "$ref": "#/components/schemas/DocumentListDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Documents/query": {
+      "post": {
+        "tags": [
+          "Documents"
+        ],
+        "operationId": "Query",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/QueryObject"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/QueryObject"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/QueryObject"
+              }
+            }
+          }
+        },
+        "responses": {
+          "500": {
+            "description": "Server Error"
+          },
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/DocumentListDto"
                   }
                 }
               }
@@ -185,7 +237,7 @@
   },
   "components": {
     "schemas": {
-      "DeviceDto": {
+      "DocumentDto": {
         "required": [
           "name"
         ],
@@ -206,13 +258,13 @@
             "type": "string",
             "nullable": true
           },
-          "hasval": {
+          "hascontent": {
             "type": "boolean"
           }
         },
         "additionalProperties": false
       },
-      "DeviceListDto": {
+      "DocumentListDto": {
         "type": "object",
         "properties": {
           "id": {
@@ -220,6 +272,20 @@
             "format": "int32"
           },
           "name": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "QueryObject": {
+        "type": "object",
+        "properties": {
+          "documentType": {
+            "type": "string",
+            "nullable": true
+          },
+          "query": {
             "type": "string",
             "nullable": true
           }
